--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "https://fullstackopen.com/en/part9/first_steps_with_type_script#exercises-9-1-9-3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "ts-node": "ts-node",
     "calculateBmi": "ts-node -- bmiCalculator.ts",
     "calculateExercises": "ts-node -- exerciseCalculator.ts"
@@ -21,7 +21,13 @@
   },
   "homepage": "https://github.com/factoriaf5-p52/kata-07-intro-typescript-letjoel#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.10",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.9.3"
   }
 }
